[package]
name = "codl"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A CLI and Rust library for interacting with cobalt, a media downloader"
homepage = "https://github.com/jake-walker/codl"
repository = "https://github.com/jake-walker/codl"
readme = "README.md"
keywords = ["cobalt", "media", "download"]
categories = [
    "command-line-utilities",
    "multimedia",
    "multimedia::audio",
    "multimedia::video",
]

[[bin]]
name = "codl"
path = "src/bin/cli.rs"

[dependencies]
bytes = "1.9.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.4"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
sha256 = "1.5.0"
tokio = { version = "1.35.1", features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }
